--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "devDependencies": {
-    "@parcel/transformer-less": "^2.4.1",
-    "@parcel/transformer-sass": "^2.4.1",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
-    "parcel": "^2.4.1"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
   "name": "telegraphv2",
   "version": "1.0.0",
+  "description": "",
+  "private": "true",
   "scripts": {
-    "run": "parcel ./index.html",
-    "build": "parcel build ./index.html"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -27,5 +17,11 @@
     "url": "https://github.com/Alex-Stone-Github/telegraphv2/issues"
   },
   "homepage": "https://github.com/Alex-Stone-Github/telegraphv2#readme",
-  "description": ""
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
