--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vue-cli": "^2.9.6"
   }
 }
